updated fourier analysis, panoirama stittching and pyramids

--- a/test_book/book.toml
+++ b/test_book/book.toml
@@ -5,5 +5,5 @@ multilingual = false
 src = "src"
 title = "Test Book"
 
-[preprocessor.chapters]
+[preprocessor.chapter_splitter]
 command = "../target/debug/books.exe"
